# rumester

./: Cargo.toml  README.md  default.nix  flake.nix  shell.nix
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: app_data.rs  client_settings.rs  download.rs  flog.rs  lib.rs  mirror.rs  runner.rs
