[package]
name = "common"
version = "0.0.1"
edition = "2021"

[dependencies]
bytes = "1.8.0"
dirs = "5.0.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["serde_derive"] }
winers = { git = "https://github.com/rumester/winers/", version = "1.0.0", rev = "27a01309d90addfcafaf625922ef410741bd35bb" }
zip = "2.2.0"
